--- a/files/README_rdoc.html
+++ b/files/README_rdoc.html
@@ -19,7 +19,7 @@
         </h1>
         <ul class="files">
             <li>README.rdoc</li>
-            <li>Last modified: Sun Jul 18 22:05:07 -0700 2010</li>
+            <li>Last modified: Sun Jul 18 22:14:11 -0700 2010</li>
         </ul>
     </div>
 
@@ -31,7 +31,7 @@
 <p>
 Installer and helpers for using <a
 href="http://github.com/arsduo/koala">Koala</a> with <a
-href="http://http;//github.com/rails/rails">Rails 3</a>
+href="http://github.com/rails/rails">Rails 3</a>
 </p>
 <h2>Installation</h2>
 <p>
